# gaming-rewards-protocol

./: .gitignore  ALTERNATIVE_TESTING.md  AUDIT_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  CONTRIBUTING.md  DAPP_STATUS_REPORT.md  Dockerfile  FINAL_AUDIT_SUMMARY.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FRONTEND_LAUNCH_STATUS.md  FRONTEND_STATUS_REPORT.md  FULL_RUST_WASM_ANALYSIS.md  GITHUB_AUDIT_REPORT.md  GITHUB_README.md  GITHUB_UPDATE_COMPLETE.md  GITHUB_UPDATE_READY.md  GITHUB_UPDATE_SECURITY_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL_VALIDATOR_SETUP.md  MULTI_LAYER_SECURITY_IMPLEMENTATION.md  NEXT_STEPS_ROADMAP.md  PHASE_1_FIXES_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PURE_RUST_MIGRATION_COMPLETE.md  PURE_RUST_WASM_BUILD_STATUS.md  QUICK_START.md  QUICK_START_VALIDATOR.md  README.md  RUST_WASM_ARCHITECTURE.md  RUST_WASM_IMPLEMENTATION_STATUS.md  RUST_WASM_INTEGRATION_STATUS.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  SECURITY_REMEDIATION_COMPLETE.md  (+26 more)
.github/workflows/: ci.yml  security-audit.yml  test-pipeline.yml
bots/: package.json  tsconfig.json
bots/src/: index.ts
bots/src/services/: game-event-detector.ts  yield-harvester.ts
bots/src/utils/: logger.ts  security-manager.ts
contracts/: Anchor.toml  Cargo.toml
contracts/programs/gaming-rewards-protocol/: Cargo.toml
contracts/programs/gaming-rewards-protocol/src/: errors.rs  lib.rs  state.rs
contracts/programs/gaming-rewards-protocol/src/instructions/: initialize_protocol.rs  mod.rs  process_achievement.rs  register_user.rs
contracts/src/: account_structs.rs  accounts.rs  constants.rs  errors.rs  events.rs  lib.rs
contracts/src/instructions/: claim_reward.rs  harvest_and_rebalance.rs  initialize_treasury.rs  mod.rs  slash_oracle.rs  verify_multi_factor.rs  verify_oauth_wallet.rs  verify_steam_session.rs
contracts/src/security/: mod.rs  verification.rs
core/: package.json  tsconfig.json
core/src/: index.ts
core/src/jupiter-integration/: index.ts
core/src/protocol-economics/: index.ts  user-staking.ts
core/src/security-manager/: fraud-detector.ts  index.ts  military-security.ts  rate-limiter.ts  session-manager.ts
core/src/steam-validation/: enhanced-validation.ts  index.ts
core/src/utils/: logger.ts
docs/: AUDIT.md  NSA-SECURITY-ARCHITECTURE.md  SECURITY-AUDIT-PIPELINE.md  SECURITY-FIXES.md  SETUP.md  TEST-PIPELINE.md
gaming-frontend/: DEPLOYMENT_GUIDE.md  UI_SECURITY_IMPLEMENTATION.md  package-lock.json  package.json
gaming-frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
gaming-frontend/src/app/components/: DebugPanel.tsx  SecureButton.tsx  SecureInput.tsx  (+1 more)
gaming-rewards-core/: Cargo.toml
gaming-rewards-core/src/: crypto_utils.rs  error.rs  fraud_detection.rs  lib.rs  reward_engine.rs  security_manager.rs  staking_logic.rs  steam_validation.rs  types.rs
gaming-rewards-program/: Anchor.toml
gaming-rewards-program/programs/gaming-rewards-program/: Cargo.toml
gaming-rewards-protocol/: Anchor.toml  SMART_CONTRACTS_DOCUMENTATION.md  SMART_CONTRACTS_STATUS.md
gaming-rewards-protocol/programs/gaming-rewards-protocol/: Cargo.toml
gaming-rewards-protocol/tests/: gaming-rewards-protocol.ts
interface/: next.config.js  package.json  tailwind.config.js
interface/src/: providers.tsx
interface/src/components/: AchievementDisplay.tsx  Notification.tsx  RewardClaim.tsx  SecurityStatus.tsx  StakingInterface.tsx  SteamAuth.tsx
interface/src/hooks/: useGamingRewards.ts  useSteamValidation.ts  useWasmCore.ts
interface/src/pages/: _app.tsx  index.tsx
interface/src/styles/: globals.css
interface/src/wasm/: wasm-loader.ts
scripts/: continuous-audit.sh  run-tests.sh  rust-audit.sh  security-audit.sh  typescript-audit.sh
solana-program/gaming-rewards-program/: Anchor.toml
solana-program/gaming-rewards-program/programs/gaming-rewards-program/: Cargo.toml
solana-program/gaming-rewards-program/programs/gaming-rewards-program/src/: lib.rs
solana-program/gaming-rewards-program/programs/gaming-rewards-program/src/instructions/: initialize_protocol.rs  mod.rs  register_user.rs  stake_rewards.rs  verify_achievement.rs
solana-program/gaming-rewards-program/programs/gaming-rewards-program/src/state/: user.rs
solana-program/gaming-rewards-program/tests/: gaming-rewards-program.ts
test/: basic.test.ts  contracts.test.ts  core.test.ts  run-tests.sh  test-setup.ts
tests/: gaming-rewards.ts  jest.config.js  setup.ts  simple-bot.test.ts  teardown.ts
tests/integration/: e2e.test.ts
tests/unit/: bots.test.ts  contracts.test.ts  smart-contract-security.test.ts
validation/: package.json
validation/src/: fraud-detection.ts  index.ts  steam-api.ts
validation/src/utils/: logger.ts
wasm-security/: Cargo.toml
wasm-security/src/: lib.rs
zero-cve-liquidity-engine/: Cargo.toml
zero-cve-liquidity-engine/src/: api_client.rs  error.rs  lib.rs  liquidity_engine.rs  main.rs  security.rs  solana_client.rs  types.rs
(+6 files in other folders)
