[package]
name = "gaming-rewards"
version = "0.1.0"
description = "Solana-based gaming rewards protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gaming_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
jupiter-cpi = { git = "https://github.com/jup-ag/jupiter-cpi", rev = "5eb8977" }
solana-program = "=1.17.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0", features = ["no-entrypoint"] }
stake = { version = "1.17.0", package = "solana-stake-program" }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0" 