[package]
name = "gaming-rewards"
version = "0.1.0"
description = "Solana-based gaming rewards protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gaming_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }

 