[package]
name = "gaming-rewards-core"
version = "2.0.0"
edition = "2021"
description = "Secure Gaming Rewards Protocol Core - Rust + WebAssembly"
authors = ["Gaming Rewards Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WebAssembly bindings
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document"] }
console_error_panic_hook = "0.1"

# Cryptographic security
aes-gcm = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# Data types and time
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# HTTP client for Steam API (not available in WASM)
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Collections and utilities
dashmap = "5.0"
lru = "0.12"

# Additional utilities
hex = "0.4"
serde_json = "1.0"
base64 = "0.21"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio-test = "0.4"
