[package]
name = "wasm-security"
version = "0.1.0"
edition = "2021"
description = "WebAssembly Security Layer for Gaming Rewards Protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "2.0"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
