[package]
name = "gaming-rewards-program"
version = "0.1.0"
description = "Gaming Rewards Protocol - Zero-CVE Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gaming_rewards_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = "6.0"
spl-associated-token-account = "7.0"
spl-memo = "6.0"
borsh = "1.5"
borsh-derive = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
